--- a/catalog/cat_app/templates/admin/delete.html
+++ b/catalog/cat_app/templates/admin/delete.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 	<form action="/catalog/{{ product.slug }}/delete" method="post">
+		<input name="_csrf_token" type="hidden" value="{{ csrf_token() }}">
 		<label for="delete-confirm">Are you sure? Delete &ldquo;{{ product.name }}&rdquo;?</label>
 		<input id="delete-confirm" type="submit" value="Delete">
 	</form>
